// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component Renders correctly 1`] = `
<div>
  <button
    class="inline-flex items-center font-bold px-4 py-2 text-base text-white bg-primary rounded-full"
    role="button"
  >
    CTA
  </button>
</div>
`;

exports[`Button component Renders correctly outlined 1`] = `
<div>
  <button
    class="inline-flex items-center font-bold px-4 py-2 text-base text-primary bg-transparent border-2 border-primary rounded-full"
    role="button"
  >
    CTA
  </button>
</div>
`;

exports[`Button component Renders correctly secondary 1`] = `
<div>
  <button
    class="inline-flex items-center font-bold px-4 py-2 text-base text-black bg-secondary rounded-full"
    role="button"
  >
    CTA
  </button>
</div>
`;

exports[`Button component Renders correctly size lg 1`] = `
<div>
  <button
    class="inline-flex items-center font-bold px-6 py-3 text-lg text-white bg-primary rounded-full"
    role="button"
  >
    CTA
  </button>
</div>
`;

exports[`Button component Renders correctly size sm 1`] = `
<div>
  <button
    class="inline-flex items-center font-bold px-4 py-2 text-sm text-white bg-primary rounded-full"
    role="button"
  >
    CTA
  </button>
</div>
`;

exports[`Button component Renders correctly text 1`] = `
<div>
  <button
    class="inline-flex items-center font-bold px-4 py-2 text-base text-current underline"
    role="button"
  >
    CTA
  </button>
</div>
`;

exports[`Button component Renders correctly with extra classes 1`] = `
<div>
  <button
    class="anotherClass inline-flex items-center font-bold px-4 py-2 text-base text-white bg-primary rounded-full"
    role="button"
  >
    CTA
  </button>
</div>
`;
